--- a/templates/slapd.j2
+++ b/templates/slapd.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 # Default location of the slapd.conf file or slapd.d cn=config directory. If
 # empty, use the compiled-in default (/etc/ldap/slapd.d with a fallback to
 # /etc/ldap/slapd.conf).
@@ -21,7 +22,11 @@ SLAPD_PIDFILE=
 # sockets.
 # Example usage:
 # SLAPD_SERVICES="ldap://127.0.0.1:389/ ldaps:/// ldapi:///"
+{% if openldap_server_enable_tls %}
 SLAPD_SERVICES="ldaps:/// ldapi:///"
+{% else %}
+SLAPD_SERVICES="ldap:// ldapi:///"
+{% endif %}
 
 # If SLAPD_NO_START is set, the init script will not start or restart
 # slapd (but stop will still work).  Uncomment this if you are
